--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site for Lena Sofware" />
-    <title>Lena Sofware</title>
+    <meta name="description" content="Web site for Form Project" />
+    <title>Form Project</title>
   </head>
   <body>
     <div id="root"></div>
